# SDL2-renderer-Imgui-template

./: .clang-format  CMakeLists.txt  README  README.md  main.cpp
assets/: font.txt
libs/: CMakeLists.txt
